--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,6 +3,5 @@
     <string name="tab_home">Home</string>
     <string name="tab_saving">Saving</string>
     <string name="tab_profile">Profile</string>
-    <!-- TODO: Remove or change this placeholder text -->
-    <string name="hello_blank_fragment">Hello blank fragment</string>
+    <string name="under_maintenance">Under Maintenance</string>
 </resources>
