UPDATE FRAGMENT HOME FIRST BEGINNING ( ADA CODING JUGA UNTUK 2 PILIHAN DI COMMENT FRAGMENT HOME)

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,4 +4,5 @@
     <string name="tab_saving">Saving</string>
     <string name="tab_profile">Profile</string>
     <string name="under_maintenance">Under Maintenance</string>
+    <string name="fitur_machine_learning"> Fitur Machine Learning</string>"
 </resources>
