--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -25,5 +25,11 @@
     <string name="success_addingShoppingReceipt">Success Adding Shopping Receipt</string>
     <string name="example">Example</string>
     <string name="note_titleProfileImgAddItemShop">Track your discount and shopping</string>
+    <string name="tv_toko1">Sugiono</string>
+    <string name="tv_toko2">Shop</string>
+    <string name="btn_addItem">Add Item</string>
+    <string name="note_emptyList">You do not have items in your shop list</string>
+    <string name="tv_discount">Set Discount for All Item</string>
+    <string name="button_Check">Check</string>
 
 </resources>
