SUCCESS TO FIX DIALOG SIZE ( CHANGE WINDOW AT ON START DIALOG FRAGMENT)

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -36,5 +36,6 @@
     <string name="note_tvTotalSaving">Total Savings ( Discount )</string>
     <string name="tv_totalShopping">Total Shopping</string>
     <string name="btn_checkout">Checkout</string>
+    <string name="cancel_dialog">Cancel Dialog</string>
 
 </resources>
