UPDATE EDIT TEXT KETIKA EDIT TEXT KOSONG MUNCUL ERROR DI ADDSHOPPING

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -57,6 +57,7 @@
     <string name="tv_free">Free</string>
     <string name="no_discount">No Discount</string>
     <string name="save">Save</string>
+    <string name="error_namaToko">Nama Toko Tidak Boleh Kosong</string>
 
 
 </resources>
