UPDATE ERROR HANDLING AFTER PRICE MANUALLY WHEN CONDITION.NONE

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -67,6 +67,7 @@
     <string name="total_icon">Title Total Icon</string>
     <string name="tv_TotalPrice">Total Price</string>
     <string name="tv_TotalSavingAmount">+ Rp 0</string>
+    <string name="error_afterPrice">Masukkan Harga Setelah Diskon Dahulu</string>
 
 
 </resources>
