--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -68,6 +68,7 @@
     <string name="tv_TotalPrice">Total Price</string>
     <string name="tv_TotalSavingAmount">+ Rp 0</string>
     <string name="error_afterPrice">Masukkan Harga Setelah Diskon Dahulu</string>
+    <string name="error_notBigger">Harga Tidak Boleh Lebih Besar dari Harga Original</string>
 
 
 </resources>
